test/1.4/errors/T_ENOPROV.dml
/*
  © 2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

provisional
/// ERROR ENOPROV
    invalid,
/// ERROR ENOPROV
      bad;

device test;
